# Navezinh_Game

./: CMakeLists.txt
Navezinha/: CMakeLists.txt
Navezinha/include/framework/: Application.h
Navezinha/src/: main.cpp
Navezinha/src/framework/: Application.cpp
NavezinhaEngine/: CMakeLists.txt
NavezinhaEngine/include/: EntryPoint.h
NavezinhaEngine/include/framework/: Application.h  Core.h  World.h
NavezinhaEngine/src/framework/: Application.cpp  World.cpp
NavezinhaGame/: CMakeLists.txt
NavezinhaGame/include/gameFramework/: GameApplication.h
NavezinhaGame/src/gameFramework/: GameApplication.cpp
