add_executable(${NAVEZINHA_GAME_TARGET_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
)

target_link_libraries(${NAVEZINHA_GAME_TARGET_NAME} PUBLIC sfml-graphics)
target_link_libraries(${NAVEZINHA_GAME_TARGET_NAME} PUBLIC sfml-window)
target_link_libraries(${NAVEZINHA_GAME_TARGET_NAME} PUBLIC sfml-system)
target_link_libraries(${NAVEZINHA_GAME_TARGET_NAME} PUBLIC sfml-audio)

function(CopyLibToTarget LIB_NAME TARGET_NAME)
		add_custom_command(TARGET ${TARGET_NAME}
		POST_BUILD
		COMMAND
		${CMAKE_COMMAND} -E copy_if_different
		$<TARGET_FILE:${LIB_NAME}>
		$<TARGET_FILE_DIR:${TARGET_NAME}>
		)
endfunction()

CopyLibToTarget(sfml-graphics ${NAVEZINHA_GAME_TARGET_NAME})
CopyLibToTarget(sfml-system ${NAVEZINHA_GAME_TARGET_NAME})
CopyLibToTarget(sfml-window ${NAVEZINHA_GAME_TARGET_NAME})
CopyLibToTarget(sfml-audio ${NAVEZINHA_GAME_TARGET_NAME})